assets/css/main.css
/* ... */
.sc-beginning .block-top {
  width: 130%;
  bottom: -110px;
  left: 50%;
  transform: translateX(-50%);
  max-width: none;
  z-index: 1;
}
.sc-beginning .ufo {
  left: 1282px;
  top: 539px;
  width: 479px;
  z-index: 2;
}

/* blue-bg-group
sc-since: 135vh,
sc-creator: 245vh
sc-first-sets: 150vh
 */
.sc-since {
  position: relative;
  width: 100vw;
  height: 135vh;
}
.sc-since::before {
  position: absolute;
  width: 100vw;
  height: 530vh;
  top: 0;
  left: 0;
  content: "";
  background-color: #0e1730;
}
.sc-since::after {
  position: absolute;
  top: 0;
  left: 0;
  content: "";
  width: 100vw;
  height: 530vh;
  background: url("../imgs/space-bg3.png") repeat-y center / cover;
}
.sc-since .content-area > * {
  position: absolute;
  font-weight: 300;
  letter-spacing: -0.4px;
  text-transform: uppercase;
  z-index: 1;
}
.sc-since .content-area #year-1978 {
  top: 25%;
  left: 3%;
  color: #ffca20;
  font-size: 8.8vw;
}
.sc-since .content-area .title {
  top: 45%;
  left: 20%;
}
.sc-since .img-wrapper img {
  position: absolute;
  zoom: var(--zoom);
}

.sc-since .spaceship2 {
  width: 618px;
  top: 396px;
  left: 245px;
  transform: rotate(355deg);
  z-index: 2;
}
.sc-since .planet {
  width: 286px;
  top: 226px;
  right: 0;
  transform: rotate(355deg);
  animation: planetAnimation 30s linear infinite;
  z-index: 1;
}
@keyframes planetAnimation {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(215px);
  }
  100% {
    transform: translateY(0);
  }
}

.sc-creator {
  position: relative;
  width: 100vw;
  /* height: 3648px; */
  /* height: calc(100vw * 1.9); */
  height: 245vh;
  max-width: 100%;
  /* background-color: #0e1730; */
}
.sc-creator .top-section {
  position: relative;
  width: 100vw;
  height: 100vh;
}
.sc-creator .label {
  top: 7%;
  left: 3%;
}
.sc-creator .title .first-line {
  position: absolute;
  top: 3vw;
  left: 47vw;
  width: 997px;
}
/* 공통 */
em {
  color: rgb(255, 202, 32);
}
.sc-creator .title .second-line {
  position: absolute;
  /* width: 349px; */
  font-size: 8.8vw;
  /* line-height: 134px; */
  z-index: 1;
}
.sc-creator .title .second-line span {
  position: absolute;
  top: 9vw;
}
.sc-creator .title .second-line span:first-child {
  left: 3vw;
}
.sc-creator .title .second-line span:nth-child(2) {
  left: 53vw;
}
.sc-creator .title .second-line span:last-child {
  top: 19vw;
  left: 41vw;
}
.sc-creator .top-section .description {
  top: 30.5vw;
  left: 41.5vw;
}
.sc-creator .creator-area::before {
  position: absolute;
  content: "";
  zoom: var(--zoom);
  left: 353px;
  top: 43px;
  width: 272px;
  height: 272px;
  background: url("../svgs/creator-planet-bg.svg") no-repeat center / cover;
}
/* .sc-creator .creator-area::after {
  position: absolute;
  content: "";
  zoom: var(--zoom);
  width: 839px;
  left: 68px;
  top: 8px;
  height: 572px;
  background: url("../imgs/creator-bg.png") no-repeat center / cover;
} */
.sc-creator .creator {
  position: absolute;
  zoom: var(--zoom);
  width: 173px;
  left: 365px;
  top: 79px;
  height: 234px;
  background: url("../imgs/creator.png") no-repeat center / cover;
  transform: rotate(-9deg);
}
.sc-creator .top-section .img-wrapper img {
  position: absolute;
  zoom: var(--zoom);
}
.sc-creator .top-section .ufo2 {
  left: -61px;
  top: 169px;
  /* top: 0; */
  /* left: 0; */
  width: 440px;
}
.sc-creator .top-section .ufo3 {
  width: 583px;
  top: 226px;
  left: -620px;
  transform: rotate(334deg);
  z-index: 6;
}
.sc-creator .bottom-section {
  position: relative;
  width: 100vw;
  height: 150vh;
}
.sc-creator .bottom-section strong {
  position: absolute;
  top: 8vw;
  left: 58vw;
  /* width: 423px; */
  color: #ffca20;
  font-size: 2.5vw;
  line-height: 1.27;
  font-weight: 300;
  letter-spacing: -0.4px;
  text-transform: uppercase;
  /* z-index: 4; */
}
.sc-creator .bottom-section .description {
  top: 12vw;
  left: 58vw;
  /* width: 359px; */
  /* z-index: 4; */
}
.sc-creator .parts-area [class*="circle-"] {
  position: absolute;
  content: "";
  zoom: var(--zoom);
  width: 136px;
  height: 136px;
  border-radius: 50%;
  background-color: #88b2e0;
}
.sc-creator .parts-area .circle-yellow {
  left: 172px;
  top: 406px;
}
.sc-creator .parts-area .circle-gray {
  left: 419px;
  top: 180px;
}
.sc-creator .parts-area .circle-blue {
  left: 1020px;
  top: 436px;
}
.sc-creator .parts-area span {
  position: absolute;
  color: #fdf8f1;
  /* font-size: 1.3vw; */
  font-weight: 400;
  top: -28px;
  left: 44px;
}
.sc-creator .parts-area img {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}
.sc-creator .yellow-parts {
  width: 108px;
}
.sc-creator .gray-parts {
  width: 108px;
}
.sc-creator .blue-parts {
  width: 137px;
}
@keyframes yellowLegoAnimation {
  0% {
    transform: translateX(0) translateY(0) rotate(0);
  }
  16% {
    transform: translateX(8px) translateY(-163px) rotate(25deg);
  }
  32% {
    transform: translateX(-75px) translateY(-163px) rotate(25deg);
  }
  48% {
    transform: translateX(-75px) translateY(-41px) rotate(25deg);
  }
  64% {
    transform: translateX(-15px) translateY(-41px) rotate(25deg);
  }
  80% {
    transform: translateX(0) translateY(-103px) rotate(25deg);
  }
  100% {
    transform: translateX(0) translateY(0) rotate(25deg);
  }
}
@keyframes whiteLegoAnimation {
  0% {
    transform: translateX(0) translateY(0) rotate(0);
  }
  16% {
    transform: translateX(8px) translateY(-84px) rotate(0);
  }
  32% {
    transform: translateX(-138px) translateY(-70) rotate(-20deg);
  }
  48% {
    transform: translateX(-138px) translateY(41px) rotate(-20deg);
  }
  64% {
    transform: translateX(-50) translateY(41px) rotate(20deg);
  }
  80% {
    transform: translateX(-50) translateY(-126px) rotate(20deg);
  }
  100% {
    transform: translateX(0) translateY(0) rotate(0);
  }
}
/* ... */

